# lvm_sandbox

./: .gitignore  README.md  pyproject.toml
data/: focus_sweeps_60350_60897.parquet  focus_sweeps_60350_60995.parquet  focus_sweeps_60350_61024.parquet  focus_sweeps_60901_60995.parquet  focus_sweeps_60901_61024.parquet  lvm_fiducial_fibermap.yaml  pixel_shifts.parquet  pixel_shifts_ff.parquet
src/lvm_sandbox/: ag_ds9.py  analyse_focus_sweeps.py  analyse_overheads.py  calibrations.py  collect_agcam.py  collect_coadd_pointings.py  determine_offsets.py  dither_pattern.py  dome_close.py  fibermap.py  fix_posci.py  focus_temperature.py  fwhm_analysis.py  get_bench_data.py  get_lco_weather_data.py  headerfix_missing_standards.py  ion_pump_pressure.py  ln2_fill_analysis.py  monitor_switch_agcam_poe.py  pa_analysis.py  pixel_shifts.py  plot_agcam_acquisition.py  plot_bias_electronic_bands.py  plot_skye_fwhm.py  plot_tracking.py  pointing_analysis.py  pointing_model.py  replace_wcs_sel_saz.py  reprocess_ag_astrometry.py  scrap_pwi_status.py  test_dome.py  test_gort.py  test_pwi_slew_time.py
src/lvm_sandbox/self_calibration/: README.md  compare_nominal_to_self_calibration.py
src/lvm_sandbox/tools/: __init__.py  utils.py
