[tool.poetry]
name = "lvm_sandbox"
version = "0.1.0"
description = "Sandbox for LVM scripts and tools."
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
astropy = "^6.0.0"
pandas = "^2.0.0"
numpy = "^1.21.1"
tables = ">=3.6.1"
matplotlib = ">=3.5"
seaborn = ">=0.12.0"
sdsstools = "^1.1.0"
lvmgort = ">=0.9.0"
lvmguider = ">=0.4.2"
fastparquet = ">=2023.8.0"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
ipython = ">=8.0.0"
invoke = "*"
doc8 = ">=0.8.0"
typing_extensions = {version="*", python="~3.7"}
ipdb = ">=0.13.3"
autopep8 = ">=1.5.4"
black = {version = ">=20.8b1", allow-prereleases = true}
pandas-stubs = ">=2.0.0"
ruff = ">=0.0.284"
nptyping = ">=2.5.0"

[tool.black]
line-length = 88
target-version = ['py311']
fast = true

[tool.ruff]
line-length = 88
target-version = 'py311'
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F403", "F401", "E402"]

[tool.ruff.isort]
known-first-party = ["lvm_sandbox"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "lvmguider", "lvmgort"]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
