[project]
name = "lvm_sandbox"
version = "0.1.0"
description = "Sandbox for LVM scripts and tools."
authors = [
    { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" }
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.11,<4"

dependencies = [
    "astropy>=6.0.0",
    "pandas>=2.0.0",
    "tables>=3.6.1",
    "matplotlib>=3.5",
    "seaborn>=0.12.0",
    "sdsstools>=1.1.0",
    "lvmgort>=1.0.0b1",
    "polars>=1.0.0",
    "adbc-driver-postgresql>=0.9.0",
    "lvmguider",
    "gtools",
    "lvmopstools[all]>=0.5.13",
]

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "invoke>=2.2.0",
    "doc8>=0.8.0",
    "typing_extensions>=4.12.2;python_version~='3.7'",
    "ipdb>=0.13.3",
    "autopep8>=1.5.4",
    "pandas-stubs>=2.0.0",
    "ruff>=0.5.0"
]

[tool.uv]
package = true
default-groups = "all"

# [tool.uv.sources]
# lvmguider = { git = "https://github.com/sdss/lvmguider", branch = "main" }
# gtools = { path = "../gtools" }

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F401", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["lvm_sandbox"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "lvmguider", "lvmgort"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
